--- a/dom/events/test/test_bug1096146.html
+++ b/dom/events/test/test_bug1096146.html
@@ -22,6 +22,7 @@ const kKeydownEvent = 0x1;
 const kScrollEvent  = 0x2;
 
 var gCurrentTest = 0;
+var gNumEvents = 0;
 var kTests = [
   {
     description: "no preventDefault at 'mozbrowserbeforekeydown'",
@@ -46,19 +47,29 @@ function frameScript()
   addEventListener('scroll', handler);
 }
 
+
+function waitAndVerifyResult(count) {
+  if (gNumEvents >= 3 || count > 10) {
+    is(kTests[gCurrentTest].resultEvents,
+       kTests[gCurrentTest].expectedEvents,
+       "verify result");
+    runTests();
+	} else {
+    // We must delay to wait for scroll/keydown events
+    setTimeout(function () waitAndVerifyResult(count + 1), 100);
+  }
+}
+
 function testDefaultAction()
 {
   synthesizeKey('VK_END', {}, document.getElementById("embedded").contentWindow);
-  setTimeout(function () {
-    is(kTests[gCurrentTest].expectedEvents,
-       kTests[gCurrentTest].resultEvents,
-       "verify result");
-    runTests();
-  }, 500);
+  waitAndVerifyResult(0);
 }
 
 function prepareTest()
 {
+  gNumEvents = 0;
+
   var handler;
   if (kTests[gCurrentTest].doPreventDefault) {
     handler = preventDefaultHandler;
@@ -81,9 +92,11 @@ function prepareTest()
       var value = 0;
       switch(msg.json.type) {
         case "scroll":
+          ++gNumEvents;
           value = kScrollEvent;
           break;
         case "keydown":
+          ++gNumEvents;
           value = kKeydownEvent;
           break;
         default:
@@ -104,12 +117,14 @@ function prepareTest()
 function preventDefaultHandler(evt)
 {
   ok(true, "receive " + evt.type + " and do preventDefault.");
+	++gNumEvents;
   evt.preventDefault();
 }
 
 function noPreventDefaultHandler(evt)
 {
   ok(true, "receive " + evt.type + ".");
+	++gNumEvents;
 }
 
 function teardownHandler()
@@ -121,6 +136,7 @@ function teardownHandler()
     handler = noPreventDefaultHandler;
   }
   window.removeEventListener("mozbrowserbeforekeydown", handler);
+  document.body.removeChild(document.getElementById("embedded"));
 
   runTests();
 }
