--- a/browser/base/content/navigator-toolbox.inc.xhtml
+++ b/browser/base/content/navigator-toolbox.inc.xhtml
@@ -392,6 +392,8 @@
                   hidden="true">
               <label id="tor-connect-urlbar-button-label"/>
             </hbox>
+
+#include ../../components/onionservices/content/onionlocation-urlbar.inc.xhtml
           </hbox>
         </hbox>
         <toolbartabstop/>
