--- a/browser/base/content/navigator-toolbox.inc.xhtml
+++ b/browser/base/content/navigator-toolbox.inc.xhtml
@@ -93,6 +93,12 @@
               aria-live="polite"/>
       <hbox class="private-browsing-indicator"/>
 
+      <html:div id="tor-connect-titlebar-status" role="status">
+        <html:img alt=""
+                  src="chrome://browser/content/torconnect/tor-not-connected-to-connected-animated.svg" />
+        <html:span id="tor-connect-titlebar-status-label"></html:span>
+      </html:div>
+
 #include titlebar-items.inc.xhtml
 
     </toolbar>
@@ -377,6 +383,13 @@
                 <image id="star-button"
                        class="urlbar-icon"/>
               </hbox>
+            </hbox>
+
+            <hbox id="tor-connect-urlbar-button"
+                  role="button"
+                  class="tor-urlbar-button"
+                  hidden="true">
+              <label id="tor-connect-urlbar-button-label"/>
             </hbox>
           </hbox>
         </hbox>
